clusters/talos-cluster/oidea/invoicer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoicer-deployment
  labels:
    app: invoicer
  namespace: oidea
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: invoicer
  template:
    metadata:
      labels:
        app: invoicer
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: invoicer
          image: zot.maix.ovh/invoicer:20260330193025
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
      restartPolicy: Always
