clusters/talos-cluster/oidea/invoicer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoicer-service
  namespace: oidea
spec:
  selector:
    app: invoicer
  ports:
    - name: http
      port: 80
      targetPort: 80
