clusters/talos-cluster/oidea/invoicer-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoicer-route
  namespace: oidea
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - "invoicer.oidea.ng"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: invoicer-service
          port: 80
